welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getDirection()==Direction.EST){
  ^SnakeBuggle:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return false
  ^